# inflation-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: local_llm.json  openai.json  products.json
docs/: CPI Using AI Groupings of Categories - Cleansed.xlsx  ~$CPI Using AI Groupings of Categories - Cleansed.xlsx
src/inflation_tracker/: __init__.py  __main__.py  app.py  cli.py  config.py  models.py  openai_price_checker.py  page_price_analyzers.py  scraper_price_checker.py  storage.py
src/inflation_tracker/providers/: __init__.py  base.py  manual.py
tests/: test_app.py
