[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inflation-tracker"
version = "0.1.0"
description = "Skeleton project for tracking predefined product prices over time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai",
]
authors = [
  { name = "Sami" }
]

[project.scripts]
inflation-tracker = "inflation_tracker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
